continuing to work on generation and updating assembling_machine

--- a/docs/blocks/machines/alloy_smelter.mdx
+++ b/docs/blocks/machines/alloy_smelter.mdx
@@ -17,9 +17,10 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
 
 <CraftingTable recipe="input air techreborn:electronic_circuit air input techreborn:electric_furnace techreborn:iron_alloy_furnace techreborn:electric_furnace input air air air output techreborn:alloy_smelter"/>
 
-
-
 ### Crafting Recipes
+		<details>
+			<summary>Recipes using Alloy Smelter</summary>
+			
 <Machine config={{
   "input": [
     {
@@ -135,3 +136,4 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
     "time": 600
   }
 }} />
+		</details>
