--- a/docs/blocks/machines/assembling_machine.mdx
+++ b/docs/blocks/machines/assembling_machine.mdx
@@ -16,16 +16,1066 @@ The **Assembling Machine** is used to assemble components out of ingredients.
 
 <CraftingTable recipe=" input techreborn:electrum_plate techreborn:digital_display techreborn:electrum_plate input techreborn:advanced_circuit techreborn:advanced_machine_frame techreborn:advanced_circuit input techreborn:electrum_plate minecraft:piston techreborn:electrum_plate output techreborn:assembly_machine "/>
 
-### Usage
-
-The following components can be crafted:
-
-- <McItem slug="techreborn:advanced_circuit"/>
-- <McItem slug="techreborn:data_storage_chip"/>
-- <McItem slug="techreborn:data_storage_core"/>
-- <McItem slug="techreborn:electronic_circuit"/>
-- <McItem slug="techreborn:energy_crystal"/>
-- <McItem slug="techreborn:energy_flow_chip"/>
-- <McItem slug="techreborn:industrial_circuit"/>
-- <McItem slug="techreborn:lithium_battery"/>
-- <McItem slug="techreborn:wind_mill"/>
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Assembling Machine</summary>
+			
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:silicon_plate",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:electrum_plate",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:advanced_circuit",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:black_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:black_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:blue_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:blue_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:brown_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:brown_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:cobblestone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:coast_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:cyan_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:cyan_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:data_storage_core",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:industrial_circuit",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:data_storage_chip",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:electronic_circuit",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:peridot_plate",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:data_storage_core",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:electronic_circuit",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:emerald_plate",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:data_storage_core",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:sandstone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:dune_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:silicon_plate",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:copper_plate",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:electronic_circuit",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:phantom_membrane",
+      "qty": 16
+    },
+    {
+      "id": "minecraft:end_rod",
+      "qty": 3
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:elytra",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:synthetic_redstone_crystal",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:silicon_plate",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:energy_crystal",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:lapotron_crystal",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:industrial_circuit",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:energy_flow_chip",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:end_stone_bricks",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:eye_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:gray_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:gray_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:green_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:green_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:terracotta",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:host_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:platinum_plate",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:advanced_circuit",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:industrial_circuit",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:torch",
+      "qty": 10
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 8
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:lantern",
+      "qty": 10
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:light_blue_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:light_blue_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:light_gray_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:light_gray_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:lime_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:lime_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:aluminum_plate",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:lithium_cell",
+      "qty": 2
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:lithium_ion_battery",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:magenta_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:magenta_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:netherrack",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:netherite_upgrade_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:orange_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:orange_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:pink_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:pink_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:purple_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:purple_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:brown_terracotta",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:raiser_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:red_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:red_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:nether_bricks",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:rib_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:smooth_stone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:sentry_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:gray_terracotta",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:shaper_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:sculk_shrieker",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:silence_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:chiseled_polished_blackstone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:snout_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:soul_torch",
+      "qty": 10
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 8
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:soul_lantern",
+      "qty": 10
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 200
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:purpur_block",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:spire_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:prismarine_bricks",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:tide_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:stone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:vex_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:deepslate",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:ward_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:light_gray_terracotta",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:wayfinder_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:white_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:white_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:mossy_cobblestone",
+      "qty": 2
+    },
+    {
+      "id": "techreborn:template_template",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:wild_armor_trim_smithing_template",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 40,
+    "time": 1500
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "techreborn:solid_fuel_generator",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:magnalium_plate",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:wind_mill",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 20,
+    "time": 700
+  }
+}} />
+<Machine config={{
+  "input": [
+    {
+      "id": "minecraft:yellow_wool",
+      "qty": 2
+    },
+    {
+      "id": "minecraft:oak_planks",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:yellow_bed",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:assembling_machine",
+  "meta": {
+    "power": 25,
+    "time": 250
+  }
+}} />
+		</details>
