supporting chemical reactor machine
but this is resulting in a very ugly 532 unperformant collapsable. going to work on making that part better next

--- a/docs/blocks/machines/alloy_smelter.mdx
+++ b/docs/blocks/machines/alloy_smelter.mdx
@@ -22,6 +22,7 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
 			<summary>Recipes using Alloy Smelter</summary>
 			
 <Machine config={{
+  "id": "brass_ingot",
   "input": [
     {
       "id": "minecraft:copper_ingot",
@@ -45,6 +46,7 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
   }
 }} />
 <Machine config={{
+  "id": "bronze_ingot",
   "input": [
     {
       "id": "minecraft:copper_ingot",
@@ -68,6 +70,7 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
   }
 }} />
 <Machine config={{
+  "id": "electrum_ingot",
   "input": [
     {
       "id": "minecraft:gold_ingot",
@@ -91,6 +94,7 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
   }
 }} />
 <Machine config={{
+  "id": "invar_ingot",
   "input": [
     {
       "id": "minecraft:iron_ingot",
@@ -114,6 +118,7 @@ The **Alloy Smelter** is a machine that creates metal alloys from ingots or dust
   }
 }} />
 <Machine config={{
+  "id": "netherite_ingot",
   "input": [
     {
       "id": "minecraft:gold_ingot",
