--- a/docs/blocks/machines/assembling_machine.mdx
+++ b/docs/blocks/machines/assembling_machine.mdx
@@ -21,6 +21,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
 			<summary>Recipes using Assembling Machine</summary>
 			
 <Machine config={{
+  "id": "advanced_circuit",
   "input": [
     {
       "id": "techreborn:silicon_plate",
@@ -44,6 +45,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "black_bed_from_wool",
   "input": [
     {
       "id": "minecraft:black_wool",
@@ -67,6 +69,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "blue_bed_from_wool",
   "input": [
     {
       "id": "minecraft:blue_wool",
@@ -90,6 +93,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "brown_bed_from_wool",
   "input": [
     {
       "id": "minecraft:brown_wool",
@@ -113,6 +117,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "coast_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:cobblestone",
@@ -136,6 +141,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "cyan_bed_from_wool",
   "input": [
     {
       "id": "minecraft:cyan_wool",
@@ -159,6 +165,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "data_storage_chip",
   "input": [
     {
       "id": "techreborn:data_storage_core",
@@ -182,6 +189,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "data_storage_core",
   "input": [
     {
       "id": "techreborn:electronic_circuit",
@@ -205,6 +213,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "data_storage_core_2",
   "input": [
     {
       "id": "techreborn:electronic_circuit",
@@ -228,6 +237,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "dune_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:sandstone",
@@ -251,6 +261,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "electronic_circuit",
   "input": [
     {
       "id": "techreborn:silicon_plate",
@@ -274,6 +285,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "elytra",
   "input": [
     {
       "id": "minecraft:phantom_membrane",
@@ -297,6 +309,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "energy_crystal",
   "input": [
     {
       "id": "techreborn:synthetic_redstone_crystal",
@@ -320,6 +333,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "energy_flow_chip",
   "input": [
     {
       "id": "techreborn:lapotron_crystal",
@@ -343,6 +357,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "eye_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:end_stone_bricks",
@@ -366,6 +381,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "gray_bed_from_wool",
   "input": [
     {
       "id": "minecraft:gray_wool",
@@ -389,6 +405,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "green_bed_from_wool",
   "input": [
     {
       "id": "minecraft:green_wool",
@@ -412,6 +429,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "host_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:terracotta",
@@ -435,6 +453,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "industrial_circuit",
   "input": [
     {
       "id": "techreborn:platinum_plate",
@@ -458,6 +477,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "lantern",
   "input": [
     {
       "id": "minecraft:torch",
@@ -481,6 +501,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "light_blue_bed_from_wool",
   "input": [
     {
       "id": "minecraft:light_blue_wool",
@@ -504,6 +525,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "light_gray_bed_from_wool",
   "input": [
     {
       "id": "minecraft:light_gray_wool",
@@ -527,6 +549,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "lime_bed_from_wool",
   "input": [
     {
       "id": "minecraft:lime_wool",
@@ -550,6 +573,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "lithium_ion_battery",
   "input": [
     {
       "id": "techreborn:aluminum_plate",
@@ -573,6 +597,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "magenta_bed_from_wool",
   "input": [
     {
       "id": "minecraft:magenta_wool",
@@ -596,6 +621,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "netherite_upgrade_smithing_template",
   "input": [
     {
       "id": "minecraft:netherrack",
@@ -619,6 +645,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "orange_bed_from_wool",
   "input": [
     {
       "id": "minecraft:orange_wool",
@@ -642,6 +669,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "pink_bed_from_wool",
   "input": [
     {
       "id": "minecraft:pink_wool",
@@ -665,6 +693,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "purple_bed_from_wool",
   "input": [
     {
       "id": "minecraft:purple_wool",
@@ -688,6 +717,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "raiser_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:brown_terracotta",
@@ -711,6 +741,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "red_bed_from_wool",
   "input": [
     {
       "id": "minecraft:red_wool",
@@ -734,6 +765,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "rib_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:nether_bricks",
@@ -757,6 +789,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "sentry_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:smooth_stone",
@@ -780,6 +813,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "shaper_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:gray_terracotta",
@@ -803,6 +837,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "silence_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:sculk_shrieker",
@@ -826,6 +861,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "snout_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:chiseled_polished_blackstone",
@@ -849,6 +885,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "soul_lantern",
   "input": [
     {
       "id": "minecraft:soul_torch",
@@ -872,6 +909,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "spire_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:purpur_block",
@@ -895,6 +933,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "tide_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:prismarine_bricks",
@@ -918,6 +957,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "vex_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:stone",
@@ -941,6 +981,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "ward_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:deepslate",
@@ -964,6 +1005,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "wayfinder_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:light_gray_terracotta",
@@ -987,6 +1029,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "white_bed_from_wool",
   "input": [
     {
       "id": "minecraft:white_wool",
@@ -1010,6 +1053,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "wild_armor_trim_smithing_template",
   "input": [
     {
       "id": "minecraft:mossy_cobblestone",
@@ -1033,6 +1077,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "wind_mill",
   "input": [
     {
       "id": "techreborn:solid_fuel_generator",
@@ -1056,6 +1101,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   }
 }} />
 <Machine config={{
+  "id": "yellow_bed_from_wool",
   "input": [
     {
       "id": "minecraft:yellow_wool",
