--- a/docs/blocks/machines/industrial_centrifuge.mdx
+++ b/docs/blocks/machines/industrial_centrifuge.mdx
@@ -62,6 +62,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
 			<summary>Recipes using Industrial Centrifuge</summary>
 			
 <Machine config={{
+  "id": "basalt_dust",
   "input": [
     {
       "id": "techreborn:basalt_dust",
@@ -93,6 +94,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "brain_coral_block",
   "input": [
     {
       "id": "minecraft:brain_coral_block",
@@ -128,6 +130,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "brass_dust",
   "input": [
     {
       "id": "techreborn:brass_dust",
@@ -151,6 +154,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "bronze_dust",
   "input": [
     {
       "id": "techreborn:bronze_dust",
@@ -174,6 +178,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "bubble_coral_block",
   "input": [
     {
       "id": "minecraft:bubble_coral_block",
@@ -209,6 +214,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "calcium_carbonate_cell",
   "input": [
     {
       "id": "techreborn:calcium_carbonate_cell",
@@ -232,6 +238,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "carbon_cell_from_ashes_dust",
   "input": [
     {
       "id": "techreborn:ashes_dust",
@@ -257,6 +264,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
 
 
 <Machine config={{
+  "id": "coarse_dirt",
   "input": [
     {
       "id": "minecraft:coarse_dirt",
@@ -284,6 +292,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "crimson_nylium",
   "input": [
     {
       "id": "minecraft:crimson_nylium",
@@ -307,6 +316,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "dark_ashes_dust",
   "input": [
     {
       "id": "techreborn:dark_ashes_dust",
@@ -326,6 +336,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "deuterium_cell",
   "input": [
     {
       "id": "techreborn:deuterium_cell",
@@ -349,6 +360,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "dirt",
   "input": [
     {
       "id": "minecraft:dirt",
@@ -376,6 +388,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "electrum_dust",
   "input": [
     {
       "id": "techreborn:electrum_dust",
@@ -399,6 +412,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "enchanted_golden_apple",
   "input": [
     {
       "id": "minecraft:enchanted_golden_apple",
@@ -426,6 +440,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "ender_eye_dust",
   "input": [
     {
       "id": "techreborn:ender_eye_dust",
@@ -449,6 +464,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "endstone_dust",
   "input": [
     {
       "id": "techreborn:endstone_dust",
@@ -484,6 +500,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "fire_coral_block",
   "input": [
     {
       "id": "minecraft:fire_coral_block",
@@ -519,6 +536,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "glistering_melon_slice",
   "input": [
     {
       "id": "minecraft:glistering_melon_slice",
@@ -546,6 +564,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "glow_berries",
   "input": [
     {
       "id": "minecraft:glow_berries",
@@ -577,6 +596,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "glowstone_dust",
   "input": [
     {
       "id": "minecraft:glowstone_dust",
@@ -608,6 +628,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "golden_apple",
   "input": [
     {
       "id": "minecraft:golden_apple",
@@ -635,6 +656,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "golden_carrot",
   "input": [
     {
       "id": "minecraft:golden_carrot",
@@ -662,6 +684,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "grass_block",
   "input": [
     {
       "id": "minecraft:grass_block",
@@ -693,6 +716,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "helium_cell",
   "input": [
     {
       "id": "techreborn:helium_cell",
@@ -716,6 +740,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "horn_coral_block",
   "input": [
     {
       "id": "minecraft:horn_coral_block",
@@ -751,6 +776,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "hydrogen_cell",
   "input": [
     {
       "id": "techreborn:hydrogen_cell",
@@ -774,6 +800,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "lapis_lazuli",
   "input": [
     {
       "id": "minecraft:lapis_lazuli",
@@ -805,6 +832,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "lava_cell",
   "input": [
     {
       "id": "techreborn:lava_cell",
@@ -836,6 +864,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "magma_cream",
   "input": [
     {
       "id": "minecraft:magma_cream",
@@ -859,6 +888,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "marble_dust",
   "input": [
     {
       "id": "techreborn:marble_dust",
@@ -890,6 +920,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
 
 
 <Machine config={{
+  "id": "methan_cell_from_egg",
   "input": [
     {
       "id": "minecraft:egg",
@@ -928,6 +959,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
 
 
 <Machine config={{
+  "id": "methan_cell_from_turtle_egg",
   "input": [
     {
       "id": "minecraft:turtle_egg",
@@ -955,6 +987,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "moss_block",
   "input": [
     {
       "id": "minecraft:moss_block",
@@ -986,6 +1019,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "mycelium",
   "input": [
     {
       "id": "minecraft:mycelium",
@@ -1017,6 +1051,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "netherrack_dust",
   "input": [
     {
       "id": "techreborn:netherrack_dust",
@@ -1052,6 +1087,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "nickel_dust",
   "input": [
     {
       "id": "techreborn:nickel_dust",
@@ -1079,6 +1115,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "platinum_dust",
   "input": [
     {
       "id": "techreborn:platinum_dust",
@@ -1102,6 +1139,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "podzol",
   "input": [
     {
       "id": "minecraft:podzol",
@@ -1133,6 +1171,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_copper",
   "input": [
     {
       "id": "minecraft:raw_copper",
@@ -1156,6 +1195,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_gold",
   "input": [
     {
       "id": "minecraft:raw_gold",
@@ -1179,6 +1219,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_iron",
   "input": [
     {
       "id": "minecraft:raw_iron",
@@ -1202,6 +1243,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_lead",
   "input": [
     {
       "id": "techreborn:raw_lead",
@@ -1221,6 +1263,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_silver",
   "input": [
     {
       "id": "techreborn:raw_silver",
@@ -1240,6 +1283,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "raw_tin",
   "input": [
     {
       "id": "techreborn:raw_tin",
@@ -1263,6 +1307,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "red_garnet_dust",
   "input": [
     {
       "id": "techreborn:red_garnet_dust",
@@ -1290,6 +1335,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "redstone",
   "input": [
     {
       "id": "minecraft:redstone",
@@ -1325,6 +1371,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "rooted_dirt",
   "input": [
     {
       "id": "minecraft:rooted_dirt",
@@ -1356,6 +1403,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "rubber_log",
   "input": [
     {
       "id": "techreborn:rubber_log",
@@ -1387,6 +1435,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "sap",
   "input": [
     {
       "id": "techreborn:sap",
@@ -1406,6 +1455,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "shroomlight",
   "input": [
     {
       "id": "minecraft:shroomlight",
@@ -1433,6 +1483,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "soul_sand",
   "input": [
     {
       "id": "minecraft:soul_sand",
@@ -1468,6 +1519,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "soul_soil",
   "input": [
     {
       "id": "minecraft:soul_soil",
@@ -1503,6 +1555,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "sulfur_cell",
   "input": [
     {
       "id": "techreborn:sulfur_cell",
@@ -1526,6 +1579,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "sweet_berries",
   "input": [
     {
       "id": "minecraft:sweet_berries",
@@ -1553,6 +1607,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "tube_coral_block",
   "input": [
     {
       "id": "minecraft:tube_coral_block",
@@ -1588,6 +1643,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "tuff",
   "input": [
     {
       "id": "minecraft:tuff",
@@ -1611,6 +1667,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "warped_nylium",
   "input": [
     {
       "id": "minecraft:warped_nylium",
@@ -1634,6 +1691,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "warped_wart_block",
   "input": [
     {
       "id": "minecraft:warped_wart_block",
@@ -1661,6 +1719,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "yellow_garnet_dust",
   "input": [
     {
       "id": "techreborn:yellow_garnet_dust",
@@ -1688,6 +1747,7 @@ One <McItem slug="techreborn:methane_cell"/> can be produced from any of the fol
   }
 }} />
 <Machine config={{
+  "id": "zinc_dust",
   "input": [
     {
       "id": "techreborn:zinc_dust",
